; ModuleID = '/home/carl/AnghaBench/linux/drivers/pnp/pnpbios/extr_bioscalls.c_pnp_bios_read_escd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pnp/pnpbios/extr_bioscalls.c_pnp_bios_read_escd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"read_escd\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pnp_bios_read_escd(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @__pnp_bios_read_escd(i8* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @pnpbios_print_status(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @__pnp_bios_read_escd(i8*, i32) #1

declare dso_local i32 @pnpbios_print_status(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
